--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,21 +1,13 @@
 .nav {
   grid-area: nav;
   background-color: brown;
+  padding: 20px;
 }
 
 .item {
   padding: 5px 0px 0px 5px;
 }
 
-.item.activ {
+.active {
   color: gold;
-}
-
-.link {
-  text-decoration: none;
-  color: white;
-}
-
-.link:hover {
-  color: rgb(183, 183, 183);
 }
